[project]
name = "censaurus"
version = "0.1.1"
dynamic = ["dependencies"]
authors = [
  {name="Ethan Singer", email="singerep@bu.edu"},
]
description = "A comprehensive, feature-rich, and user-oriented Python package that wraps the U.S. Census Bureau's Data and Geographic APIs"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ['censaurus']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"censaurus" = ["_data/state_ids.csv"]

[project.urls]
"Homepage" = "https://github.com/singerep/censaurus"
"Documentation" = "https://censaurus.readthedocs.io/en/latest/"
"Issues" = "https://github.com/singerep/censaurus/issues"